<resources>
    <string name="app_name">My Application</string>

    <!--Common-->
    <string name="demo_app">Demo App</string>

    <!-- Login Screen-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Contact Screen-->
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>

</resources>
