<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:id="@+id/row_view_contact_tv_name"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/name"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:textColor="@android:color/black"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="@+id/row_view_contact_tv_id"/>

        <TextView android:id="@+id/row_view_contact_tv_id"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/id"
                  android:layout_marginRight="5dp"
                  android:textColor="@android:color/black"
                  app:layout_constraintRight_toRightOf="parent"/>

        <TextView android:id="@+id/row_view_contact_tv_email"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:layout_marginLeft="5dp"
                  android:layout_marginTop="20dp"
                  android:textColor="@android:color/black"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toTopOf="@id/row_view_contact_tv_name"/>

        <TextView android:id="@+id/row_view_contact_tv_gender"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/gender"
                  android:layout_marginLeft="5dp"
                  android:textColor="@android:color/black"
                  android:layout_marginTop="20dp"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toTopOf="@id/row_view_contact_tv_email"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>